2008-06-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* dired.el (dired-insert-directory): Don't assume Unix-style dir names.

	* subr.el (momentary-string-display): Use an overlay.

	* progmodes/compile.el (compilation-mode):
	Set window-point-insertion-type.
	(compilation-filter): Don't use insert-before-markers any more.
	* emacs-lisp/trace.el (trace-make-advice):
	Set window-point-insertion-type in the trace buffer.
	* startup.el (normal-top-level): Set window-point-insertion-type in
	*Messages*.
	* net/telnet.el (telnet-mode): Set window-point-insertion-type.
	(telnet-filter): Don't use insert-before-markers any more.
	* comint.el (comint-mode): Set window-point-insertion-type.
	(comint-output-filter): Don't use insert-before-markers any more.
	* button.el (make-text-button): Allow `start' to be a string.

2008-06-10  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/autoload.el (autoload-rubric):
	Fix coding cookie not to force Unix EOL.

2008-06-10  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window--splittable-p, window--try-to-split-window):
	Don't use with-selected-window to avoid messing up get-lru-window.

2008-06-10  Glenn Morris  <rgm@gnu.org>

	* subr.el (locate-library): Doc fix.

	* net/newsticker-treeview.el (w3m-toggle-inline-images): Declare.
	(newsticker-treeview-tool-bar-map, newsticker-treeview-mode):
	Check tool-bar-map is bound, for non-X builds.

	* net/newsticker-reader.el (newsticker--next-item-image)
	(newsticker--previous-item-image, newsticker--previous-feed-image)
	(newsticker--next-feed-image, newsticker--mark-read-image)
	(ewsticker--mark-immortal-image, newsticker--narrow-image)
	(newsticker--get-all-image, newsticker--update-image)
	(newsticker--browse-image): Check xpm images are available.
	(newsticker--mark-read-image, newsticker--mark-immortal-image)
	(newsticker--narrow-image, newsticker--get-all-image): Doc fix.

	* net/newsticker-plainview.el (tool-bar-map): Don't declare.